--- a/WeatherApp/Jenkinsfile
+++ b/WeatherApp/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline{
         stage("Deploy"){
             steps{
                 sh "rm -rf /usr/local/var/www/node-app"
-                sh "rm -rf /users/aakash/.jenkins/workspace/WeatherApp /usr/local/var/www/node-app"
+                sh "rm -rf /users/VAIBHAV/AppData/Local/Jenkins.jenkins/workspace/WeatherApp /usr/local/var/www/node-app"
             }
         }
     }
